clusters/easy-platform/apps/open-platform/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-platform
  labels:
    pod-security.kubernetes.io/enforce: restricted
