clusters/easy-platform/apps/open-platform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform
  namespace: open-platform
  annotations:
    platform.lazycampus.com/domain-automation: enabled
spec:
  ingressClassName: traefik
  rules:
    - host: platform.lazycampus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform
                port:
                  name: http
